# rhizome

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml  security.yml
docs/: architecture.md  overview.md
mermaid-validator/: package-lock.json  package.json  validate-mermaid.mjs
scripts/: build-release.sh  rhizome_entry.py
src/kb/: __init__.py  adopt.py  check.py  cli.py  contract.py  links.py  sources.py
src/rhizome/: __init__.py  adopt.py  amend.py  capture.py  check.py  cli.py  config.py  contract.py  doctor.py  links.py  relocate.py  sources.py  telemetry.py
tests/: conftest.py  test_adopt.py  test_amend.py  test_capture.py  test_check.py  test_cli.py  test_config.py  test_contract.py  test_doctor.py  test_duplicate_domains.py  test_frozen_gate.py  test_links.py  test_parse.py  test_relocate.py  test_sources.py
